syntax = "proto3";

package api.palace;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "palace/common/system.proto";
import "palace/common/system_enum.proto";
import "palace/common/common.proto";

option go_package = "github.com/aide-family/moon/pkg/api/palace;palace";

// Auth service provides authentication related operations
service Auth {
  // GetCaptcha sends a captcha image to the client
  rpc GetCaptcha(GetCaptchaRequest) returns (GetCaptchaReply) {
    option (google.api.http) = {
      get: "/api/auth/captcha"
    };
  }

  // LoginByPassword authenticates a user with email and password
  rpc LoginByPassword(LoginByPasswordRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/api/auth/login"
      body: "*"
    };
  }

  // VerifyEmail verifies the user's email address
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailReply) {
    option (google.api.http) = {
      post: "/api/auth/verify/email"
      body: "*"
    };
  }

  // LoginByEmail logs in using email verification code
  rpc LoginByEmail(LoginByEmailRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/api/auth/login/email"
      body: "*"
    };
  }

  // OAuthLoginByEmail logs in using OAuth2.0 and email
  rpc OAuthLoginByEmail(OAuthLoginByEmailRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/api/auth/oauth2/login/email"
      body: "*"
    };
  }

  // Logout logs out the user
  rpc Logout(LogoutRequest) returns (LogoutReply) {
    option (google.api.http) = {
      post: "/api/auth/logout"
      body: "*"
    };
  }

  // RefreshToken refreshes the login token
  rpc RefreshToken(api.palace.common.EmptyRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/api/auth/refresh"
      body: "*"
    };
  }

  // OAuth2List returns the list of supported OAuth2.0 providers
  rpc OAuth2List(api.palace.common.EmptyRequest) returns (OAuth2ListReply) {
    option (google.api.http) = {
      post: "/api/auth/oauth2/list"
      body: "*"
    };
  }

  // GetFilingInformation gets the filing information
  rpc GetFilingInformation(api.palace.common.EmptyRequest) returns (GetFilingInformationReply) {
    option (google.api.http) = {
      post: "/api/auth/filing/information"
      body: "*"
    };
  }

  // GetSelfMenuTree returns the menu tree
  rpc GetSelfMenuTree(api.palace.common.EmptyRequest) returns (GetSelfMenuTreeReply) {
    option (google.api.http) = {
      get: "/api/auth/self/menu/tree"
    };
  }

  // ReplaceUserRole updates the user's role
  rpc ReplaceUserRole(ReplaceUserRoleRequest) returns (api.palace.common.EmptyReply) {
    option (google.api.http) = {
      post: "/api/auth/user/role"
      body: "*"
    };
  }

  // ReplaceMemberRole updates the member's role
  rpc ReplaceMemberRole(ReplaceMemberRoleRequest) returns (api.palace.common.EmptyReply) {
    option (google.api.http) = {
      post: "/api/auth/member/role"
      body: "*"
    };
  }

  rpc CaptchaVerify(CaptchaValidateRequest) returns (CaptchaValidateReply) {
    option (google.api.http) = {
      post: "/api/auth/captcha/verify"
      body: "*"
    };
  }
}

// CaptchaValidateRequest is used to validate the captcha
message CaptchaValidateRequest {
  // Captcha Id, used to identify the captcha image
  string captchaId = 1 [(buf.validate.field).cel = {
    id: "CAPTCHA_VALIDATE_CAPTCHA_ID_VALIDATOR",
    message: "captchaId is required"
    expression: "this.size() > 0"
  }];

  int32  angle = 2 ;
  int32  sx = 3 ;
  int32 sy = 4 ;
  string dots = 5 ;
}

message CaptchaValidateReply {
  bool isSuccess = 1;
}

// GetCaptchaReply contains the response data for the GetCaptcha method
message GetCaptchaReply {
  // Unique identifier for the captcha
  string captchaId = 1;
  string masterImageBase64 = 2;
  int32 expiredSeconds = 3;
  string thumbImageBase64 = 4;
  int32  thumbSize = 5;
  int32  tileWidth = 6;
  int32  tileHeight = 7;
}

// LoginByPasswordRequest represents the request data for logging in with password
message LoginByPasswordRequest {
  // User email
  string email = 1 [(buf.validate.field).cel = {
    id: "LOGIN_BY_PASSWORD_EMAIL_VALIDATOR",
    message: "email is required"
    expression: "this.size() > 0 && this.isEmail()"
  }, (buf.validate.field).cel = {
    message: "email is invalid"
    expression: "this.isEmail()"
  }];
  // User password
  string password = 2 [(buf.validate.field).cel = {
    id: "LOGIN_BY_PASSWORD_PASSWORD_VALIDATOR",
    message: "password is required"
    expression: "this.size() > 0"
  }, (buf.validate.field).cel = {
    id: "LOGIN_BY_PASSWORD_PASSWORD_MAX_LENGTH_VALIDATOR",
    message: "password max length is 32"
    expression: "this.size() <= 32"
  }];
}

// LoginByEmailRequest represents the request data for logging in with email verification code
message LoginByEmailRequest {
  // Username, not email
  string username = 1 [(buf.validate.field).cel = {
    id: "LOGIN_BY_EMAIL_USERNAME_VALIDATOR",
    message: "username is required"
    expression: "this.size() > 0"
  }, (buf.validate.field).cel = {
    id: "LOGIN_BY_EMAIL_USERNAME_MAX_LENGTH_VALIDATOR",
    message: "username max length is 32"
    expression: "this.size() <= 32"
  }];
  // User email
  string email = 2 [(buf.validate.field).cel = {
    id: "LOGIN_BY_EMAIL_EMAIL_VALIDATOR",
    message: "email is required"
    expression: "this.size() > 0"
  }, (buf.validate.field).cel = {
    id: "LOGIN_BY_EMAIL_EMAIL_INVALID_VALIDATOR",
    message: "email is invalid"
    expression: "this.isEmail()"
  }];
  // Email verification code
  string code = 3 [(buf.validate.field).cel = {
    id: "LOGIN_BY_EMAIL_CODE_VALIDATOR",
    message: "code is required"
    expression: "this.size() > 0"
  }];
  // User nickname, optional
  string nickname = 4 [(buf.validate.field).cel = {
    id: "LOGIN_BY_EMAIL_NICKNAME_MAX_LENGTH_VALIDATOR",
    message: "nickname max length is 32"
    expression: "this.size() <= 32"
  }];
  // Remark, for additional information
  string remark = 5 [(buf.validate.field).cel = {
    id: "LOGIN_BY_EMAIL_REMARK_MAX_LENGTH_VALIDATOR",
    message: "remark max length is 200"
    expression: "this.size() <= 200"
  }];
  // User gender, optional
  api.palace.common.Gender gender = 6;
}

// OAuthLoginByEmailRequest represents the request data for OAuth2.0 login with email
message OAuthLoginByEmailRequest {
  // OAuth2.0 provider Id
  string openId = 1 [(buf.validate.field).cel = {
    id: "OAUTH_LOGIN_BY_EMAIL_OPEN_ID_VALIDATOR",
    message: "openId is required"
    expression: "this.size() > 0"
  }];
  // User email
  string email = 2 [(buf.validate.field).cel = {
    id: "OAUTH_LOGIN_BY_EMAIL_EMAIL_VALIDATOR",
    message: "email is required"
    expression: "this.size() > 0"
  }, (buf.validate.field).cel = {
    id: "OAUTH_LOGIN_BY_EMAIL_EMAIL_INVALID_VALIDATOR",
    message: "email is invalid"
    expression: "this.isEmail()"
  }];
  // OAuth2.0 authorization code
  string code = 3 [(buf.validate.field).cel = {
    id: "OAUTH_LOGIN_BY_EMAIL_CODE_VALIDATOR",
    message: "code is required"
    expression: "this.size() > 0"
  }];
  // OAuth2.0 token
  string token = 4 [(buf.validate.field).cel = {
    id: "OAUTH_LOGIN_BY_EMAIL_TOKEN_VALIDATOR",
    message: "token is required"
    expression: "this.size() > 0"
  }];
  // Application Id, to identify the application
  int32 app = 5 [(buf.validate.field).cel = {
    id: "OAUTH_LOGIN_BY_EMAIL_APP_VALIDATOR",
    message: "app is required"
    expression: "this > 0"
  }];
}

// LoginReply contains the response data for successful login
message LoginReply {
  // Login token
  string token = 1;
  // Token expiration time in seconds
  int32 expiredSeconds = 2;
  // User basic information
  api.palace.common.UserBaseItem user = 3;
}

// LogoutRequest represents the request data for logging out
message LogoutRequest {
  // Redirect URL after logout, optional
  string redirect = 1;
}

// LogoutReply contains the response data for successful logout
message LogoutReply {
  // Redirect URL after logout, if any
  string redirect = 1;
}

// VerifyEmailRequest represents the request data for email verification
message VerifyEmailRequest {
  // Email to verify
  string email = 1 [(buf.validate.field).cel = {
    id: "VERIFY_EMAIL_EMAIL_VALIDATOR",
    message: "email is required"
    expression: "this.size() > 0"
  }, (buf.validate.field).cel = {
    id: "VERIFY_EMAIL_EMAIL_INVALID_VALIDATOR",
    message: "email is invalid"
    expression: "this.isEmail()"
  }];
}

// VerifyEmailReply contains the response data for successful email verification
message VerifyEmailReply {
  // Email verification code expiration time in seconds
  int32 expiredSeconds = 2;
}

// OAuth2ListReply contains the list of supported OAuth2.0 providers
message OAuth2ListReply {
  // OAuth2.0 provider information item
  message OAuthItem {
    // Provider icon URL
    string icon = 1;
    // Provider label or name
    string label = 2;
    // Provider redirect URL
    string redirect = 3;
  }

  // List of OAuth2.0 providers
  repeated OAuthItem items = 1;
}

// GetFilingInformationReply contains the response data for getting the filing information
message GetFilingInformationReply {
  // URL of the filing information
  string url = 1;
  // Filing information
  string filingInformation = 2;
}

// GetSelfMenuTreeReply contains the response data for getting the menu tree
message GetSelfMenuTreeReply {
  // Menu tree data
  repeated api.palace.common.MenuTreeItem items = 1;
}

// ReplaceUserRoleRequest represents the request data for replacing a user's role
message ReplaceUserRoleRequest {
  uint32 userId = 1 [(buf.validate.field).cel = {
    id: "REPLACE_USER_ROLE_USER_ID_VALIDATOR",
    message: "must select a user"
    expression: "this > 0"
  }];
  repeated uint32 roleIds = 2;
}

// ReplaceMemberRoleRequest represents the request data for replacing a member's role
message ReplaceMemberRoleRequest {
  uint32 memberId = 1 [(buf.validate.field).cel = {
    id: "REPLACE_MEMBER_ROLE_MEMBER_ID_VALIDATOR",
    message: "must select a member"
    expression: "this > 0"
  }];
  repeated uint32 roleIds = 2;
}


message GetCaptchaRequest {
  int32  min = 1;
  int32 max = 2;
}